# heartbeat-rs

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
src/: error.rs  hook.rs  in_flight.rs  inbox.rs  launch.rs  lib.rs  main.rs  pty.rs  recover.rs
tasks/error-handling-build/: work-order.md
tasks/error-handling-strategy/: work-order.md
tests/: cli.rs  launch.rs
