[package]
name = "heartbeat-rs"
version = "0.3.3"
edition = "2021"
description = "Stop hook for autonomous Claude Code agent loops — drain a message inbox across turns without a persistent process"
license = "MIT"
repository = "https://github.com/gabaum10/heartbeat-rs"
authors = ["Geoff Baum <gabaum10@gmail.com>"]
keywords = ["claude", "ai", "agent", "hook", "automation"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "heartbeat-stop"
path = "src/main.rs"

[[bin]]
name = "heartbeat-launch"
path = "src/launch.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
portable-pty = "0.9"
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[lib]
name = "heartbeat_rs"
path = "src/lib.rs"
