[package]
name = "heartbeat-rs"
version = "0.4.0"
edition = "2021"
description = "Stop hook for autonomous Claude Code agent loops — drain a message inbox across turns without a persistent process"
license = "MIT"
repository = "https://github.com/gabaum10/heartbeat-rs"
authors = ["Geoff Baum <gabaum10@gmail.com>"]
keywords = ["claude", "ai", "agent", "hook", "automation"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "heartbeat-stop"
path = "src/main.rs"

[[bin]]
name = "heartbeat-launch"
path = "src/launch.rs"
required-features = ["launch"]

[features]
launch = ["dep:portable-pty", "dep:anyhow"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
portable-pty = { version = "0.9", optional = true }
anyhow = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"

[[test]]
name = "launch"
path = "tests/launch.rs"
required-features = ["launch"]

[lib]
name = "heartbeat_rs"
path = "src/lib.rs"
