[package]
name = "heartbeat-rs"
version = "0.4.2"
edition = "2021"
description = "Heartbeat pattern for persistent AI CLI sessions — stop hook (heartbeat-stop) and PTY launcher (heartbeat-launch)"
license = "MIT"
repository = "https://github.com/gabaum10/heartbeat-rs"
authors = ["Geoff Baum <gabaum10@gmail.com>"]
keywords = ["claude", "ai", "agent", "hook", "automation"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "heartbeat-stop"
path = "src/main.rs"

[[bin]]
name = "heartbeat-launch"
path = "src/launch.rs"
required-features = ["launch"]

[features]
launch = ["dep:portable-pty", "dep:anyhow", "dep:libc", "dep:strip-ansi-escapes"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
portable-pty = { version = "0.9", optional = true }
anyhow = { version = "1", optional = true }
libc = { version = "0.2", optional = true }
strip-ansi-escapes = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3"

[[test]]
name = "launch"
path = "tests/launch.rs"
required-features = ["launch"]

[lib]
name = "heartbeat_rs"
path = "src/lib.rs"
